--- a/src/text-editor/control-panel/ControlPanel.css
+++ b/src/text-editor/control-panel/ControlPanel.css
@@ -7,8 +7,9 @@
     padding-top: 5px;
 }
 #format-actions {
-    width: 200px;
-    margin-right: 400px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
 }
 
 .active {
